<resources>
    <string name="app_name">LifePlanner</string>
    <string name="shell_status">Android runnable implementation with CommonOS consumer contract</string>
    <string name="label_plan_title">Plan Title</string>
    <string name="hint_plan_title">Move to new home</string>
    <string name="label_category">Category</string>
    <string name="label_horizon">Horizon</string>
    <string name="label_target_year">Target Year</string>
    <string name="hint_target_year">2030</string>
    <string name="label_estimated_cost">Estimated Cost JPY</string>
    <string name="hint_estimated_cost">3000000</string>
    <string name="label_priority">Priority</string>
    <string name="label_status">Status</string>
    <string name="label_review_month">Review Month</string>
    <string name="hint_review_month">2026-12</string>
    <string name="label_memo">Memo</string>
    <string name="hint_memo">Reason or dependency</string>
    <string name="button_save">Save Plan</string>
    <string name="button_sample">Insert Sample</string>
    <string name="button_clear">Clear Data</string>
    <string name="label_summary">Summary</string>
    <string name="label_records">Records</string>
</resources>
